api-gateway/deployment/namespace.yml
# create new namespace
apiVersion: v1
kind: Namespace
metadata:
  name: api-gateway
  labels:
    name: api-gateway
