api-gateway/deployment/user-service.yml
# deployment/user-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: api-gateway
spec:
  replicas: 1 # The number of replicas is kept to 1 as we are using an in-memory database.
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: varunu2892/user-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8003
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: api-gateway
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8003
  type: ClusterIP
