api-gateway/deployment/protected-services-ingress.yml
# deployment/protected-services-protected-services-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: protected-services-ingress
  namespace: api-gateway
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://user-service.api-gateway.svc.cluster.local/auth/validate"
    nginx.ingress.kubernetes.io/auth-method: "GET"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-From-Gateway"
spec:
  ingressClassName: nginx
  rules:
    - host: api-gateway-demo.com
      http:
        paths:
          - path: /api/v1/orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8001
          - path: /api/v1/pickups
            pathType: Prefix
            backend:
              service:
                name: order-pickup-service
                port:
                  number: 8002
